--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.6.2"
+    "babel-plugin-import": "^1.6.2",
+    "fetch-jsonp": "^1.1.3"
   }
 }
